# python-dashboard-streamlit

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: app.py  dataloader.py  plots.py
