[project]
name = "python-dashboard-streamlit"
version = "0.1.0"
description = "Simple visualisation dashboard in Python"
readme = "README.md"
requires-python = ">=3.13"
[project]
classifiers = ["Private :: Do Not Upload"]

dependencies = [
    "fastexcel>=0.13.0",
    "ipykernel>=6.29.5",
    "millify>=0.1.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.26.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
